# ronzzdoi

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AGENTS-citation.md  AGENTS-db.md  AGENTS-doi.md  SOLUTIONS_v010_master_plan.md
scripts/: test.sh
src/ronzzdoi/: __init__.py
src/ronzzdoi/auth/: __init__.py  config.py
src/ronzzdoi/citation/: __init__.py  formatter.py  schemas.py  styles.py
src/ronzzdoi/cli/: __init__.py  auth.py  citation.py  client.py  doi.py  search.py
src/ronzzdoi/db/: __init__.py  schema.py  service.py
src/ronzzdoi/doi/: __init__.py  constants.py  exceptions.py  schema.py  service.py
src/ronzzdoi/scripts/: __init__.py  dev_cli.py  server_cli.py
src/ronzzdoi/server/: __init__.py  app.py  auth_middleware.py  auth_routes.py  citation_routes.py  command_routes.py  doi_routes.py  public_routes.py  public_schemas.py  search_routes.py
src/ronzzdoi/server/command/: __init__.py  models.py  registry.py
src/ronzzdoi/static/: __init__.py
tests/: conftest.py  e2e_gui_smoke.mjs  test_auth_config.py  test_auth_integration.py  test_auth_middleware.py  test_auth_routes.py  test_citation.py  test_citation_routes.py  test_cli_auth.py  test_cli_citation.py  test_cli_client.py  test_cli_doi.py  test_cli_search.py  test_command.py  test_db.py  test_doi_routes.py  test_doi_service.py  test_handlers.py  test_public_routes.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  main.js
web/src/lib/: AuthBanner.svelte  ChatInput.svelte  ChatSuggestions.svelte  DetailTab.svelte  DoiListTab.svelte  ErrorPopup.svelte  FormTab.svelte  HelpPopup.svelte  HomeTab.svelte  KeyboardShortcutOverlay.svelte  ListTab.svelte  LoadingPopup.svelte  StatusPopup.svelte  TabView.svelte  api.js  commandEngine.js  commandExecutor.js  commandTree.js  parser.js
web/src/lib/__tests__/: commandExecutor.test.js  parser.test.js
(+5 files in other folders)
