[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ronzzdoi"
version = "0.1.0"
description = "In-house DOI & citation management system at ronzz.org — persistent citations for external and internal documents, semantic web federation ready"
authors = [{name = "Rong ZHOU"}]
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "lightercore>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
]

[project.scripts]
ronzzdoi-dev = "ronzzdoi.scripts.dev_cli:dev_main"

[tool.hatch.build.targets.wheel]
packages = ["src/ronzzdoi"]

[tool.uv.sources]
lightercore = { path = "../lightercore", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff.lint]
select = [
    "S110", "S112",    # flake8-bandit (security)
    "E", "F",          # pycodestyle + pyflakes
    "I",               # isort
    "B",               # flake8-bugbear
    "SIM",             # flake8-simplify
    "UP",              # pyupgrade
    "RUF",             # Ruff-specific
]
ignore = [
    "B008",            # do not perform function calls in argument defaults
    "B904",            # raise-without-from-inside-except (noisy, low value)
    "E501",            # line-too-long (pre-existing)
    "E741",            # ambiguous-variable-name (single-letter vars are fine)
    "RUF012",          # mutable class attributes
    "SIM105",          # suppressible-exception (sometimes pass is intentional)
    "SIM108",          # use ternary operator (prefer if/else for readability)
]
